# transportation_flow

./: README.md  pyproject.toml
src/transportation_flow/: main.py
src/transportation_flow/crews/extraction_crew/: extraction_crew.py
src/transportation_flow/crews/extraction_crew/config/: agents.yaml  tasks.yaml
src/transportation_flow/crews/request_crew/: request_crew.py
src/transportation_flow/crews/request_crew/config/: agents.yaml  tasks.yaml
src/transportation_flow/crews/summary_crew/: summary_crew.py
src/transportation_flow/crews/summary_crew/config/: agents.yaml  tasks.yaml
src/transportation_flow/schemas/: conversation_state.py  transportation_models.py
tests/: debug_ollama.py  test_conversation.py  test_crews.py  test_flow.py  test_ollama.py
